covid change round 2

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -17,11 +17,11 @@ body {
 }
 .display-2 {
   font-family: 'Rubik', sans-serif;
-  font-size: 3rem;
+  font-size: 2.8rem;
   font-display: swap;
 }
 .display-2 > .mbr-iconfont {
-  font-size: 4.8rem;
+  font-size: 4.48rem;
 }
 .display-4 {
   font-family: 'Rubik', sans-serif;
@@ -59,9 +59,9 @@ body {
     line-height: calc( 1.4 * (2.1374999999999997rem + (4.25 - 2.1374999999999997) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-2 {
-    font-size: 2.4rem;
-    font-size: calc( 1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 2.24rem;
+    font-size: calc( 1.63rem + (2.8 - 1.63) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.63rem + (2.8 - 1.63) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-4 {
     font-size: 0.8rem;
@@ -17877,249 +17877,14 @@ section.lazy-placeholder:after {
 .cid-rUXn79enUn H2 {
   color: #ffffff;
 }
-.cid-rCDT3zbHKH .modal-body .close {
-  background: #1b1b1b;
+.cid-rV3vL4JYcY {
+  background-image: url("../../../assets/images/zynomed-landingpage-1920x1280.png");
 }
-.cid-rCDT3zbHKH .modal-body .close span {
-  font-style: normal;
-}
-.cid-rCDT3zbHKH .carousel-inner > .active,
-.cid-rCDT3zbHKH .carousel-inner > .next,
-.cid-rCDT3zbHKH .carousel-inner > .prev {
-  display: table;
-}
-.cid-rCDT3zbHKH .carousel-control .icon-next,
-.cid-rCDT3zbHKH .carousel-control .icon-prev {
-  margin-top: -18px;
-  font-size: 40px;
-  line-height: 27px;
-}
-.cid-rCDT3zbHKH .carousel-control:hover {
-  background: #1b1b1b;
-  color: #fff;
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-rCDT3zbHKH .container .carousel-control {
-    margin-bottom: 0;
-  }
-}
-.cid-rCDT3zbHKH .boxed-slider {
-  position: relative;
-  padding: 93px 0;
-}
-.cid-rCDT3zbHKH .boxed-slider > div {
-  position: relative;
-}
-.cid-rCDT3zbHKH .container img {
-  width: 100%;
-}
-.cid-rCDT3zbHKH .container img + .row {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  right: 0;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  transform: translateY(-50%);
-  z-index: 2;
-}
-.cid-rCDT3zbHKH .mbr-section {
-  padding: 0;
-  background-attachment: scroll;
-}
-.cid-rCDT3zbHKH .mbr-table-cell {
-  padding: 0;
-}
-.cid-rCDT3zbHKH .container .carousel-indicators {
-  margin-bottom: 3px;
-}
-.cid-rCDT3zbHKH .carousel-caption {
-  top: 50%;
-  right: 0;
-  bottom: auto;
-  left: 0;
-  display: -webkit-flex;
-  align-items: center;
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-  -webkit-align-items: center;
-}
-.cid-rCDT3zbHKH .mbr-overlay {
-  z-index: 1;
-}
-.cid-rCDT3zbHKH .container-slide.container {
-  min-width: 100%;
-  min-height: 100vh;
-  padding: 0;
-}
-.cid-rCDT3zbHKH .carousel-item {
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -o-transition: -o-transform 0.6s ease-in-out;
-  -webkit-transition: -webkit-transform 0.6s ease-in-out;
-  transition: transform 0.6s ease-in-out, -webkit-transform 0.6s ease-in-out, -o-transform 0.6s ease-in-out;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -webkit-perspective: 1000px;
-  perspective: 1000px;
-}
-@media (max-width: 576px) {
-  .cid-rCDT3zbHKH .carousel-item .container {
-    width: 100%;
-  }
-}
-.cid-rCDT3zbHKH .carousel-item-next.carousel-item-left,
-.cid-rCDT3zbHKH .carousel-item-prev.carousel-item-right {
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-}
-.cid-rCDT3zbHKH .active.carousel-item-right,
-.cid-rCDT3zbHKH .carousel-item-next {
-  -webkit-transform: translate3d(100%, 0, 0);
-  transform: translate3d(100%, 0, 0);
-}
-.cid-rCDT3zbHKH .active.carousel-item-left,
-.cid-rCDT3zbHKH .carousel-item-prev {
-  -webkit-transform: translate3d(-100%, 0, 0);
-  transform: translate3d(-100%, 0, 0);
-}
-.cid-rCDT3zbHKH .mbr-slider .carousel-control {
-  top: 50%;
-  width: 70px;
-  height: 70px;
-  margin-top: -1.5rem;
-  font-size: 35px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  transition: all .3s;
-}
-.cid-rCDT3zbHKH .mbr-slider .carousel-control.carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-rCDT3zbHKH .mbr-slider .carousel-control.carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-rCDT3zbHKH .mbr-slider .carousel-control .mbr-iconfont {
-  font-size: 2rem;
-}
-@media (max-width: 767px) {
-  .cid-rCDT3zbHKH .mbr-slider .carousel-control {
-    top: auto;
-    bottom: 1rem;
-  }
-}
-.cid-rCDT3zbHKH .mbr-slider .carousel-indicators {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 1.5rem !important;
-}
-.cid-rCDT3zbHKH .mbr-slider .carousel-indicators li {
-  max-width: 20px;
-  width: 20px;
-  height: 20px;
-  max-height: 20px;
-  margin: 3px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  opacity: .5;
-  transition: all .3s;
-}
-.cid-rCDT3zbHKH .mbr-slider .carousel-indicators li.active,
-.cid-rCDT3zbHKH .mbr-slider .carousel-indicators li:hover {
-  opacity: .9;
-}
-.cid-rCDT3zbHKH .mbr-slider .carousel-indicators li::after,
-.cid-rCDT3zbHKH .mbr-slider .carousel-indicators li::before {
-  content: none;
-}
-.cid-rCDT3zbHKH .mbr-slider .carousel-indicators.ie-fix {
-  left: 50%;
-  display: block;
-  width: 60%;
-  margin-left: -30%;
-  text-align: center;
-}
-@media (max-width: 576px) {
-  .cid-rCDT3zbHKH .mbr-slider .carousel-indicators {
-    display: none !important;
-  }
-}
-.cid-rCDT3zbHKH .mbr-slider > .container img {
-  width: 100%;
-}
-.cid-rCDT3zbHKH .mbr-slider > .container img + .row {
-  position: absolute;
-  top: 50%;
-  right: 0;
-  left: 0;
-  z-index: 2;
-  -moz-transform: translateY(-50%);
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-}
-.cid-rCDT3zbHKH .mbr-slider > .container .carousel-indicators {
-  margin-bottom: 3px;
-}
-@media (max-width: 576px) {
-  .cid-rCDT3zbHKH .mbr-slider > .container .carousel-control {
-    margin-bottom: 0;
-  }
-}
-.cid-rCDT3zbHKH .mbr-slider .mbr-section {
-  padding: 0;
-  background-attachment: scroll;
-}
-.cid-rCDT3zbHKH .mbr-slider .mbr-table-cell {
-  padding: 0;
-}
-.cid-rCDT3zbHKH .carousel-item .container.container-slide {
-  position: initial;
-  width: auto;
-  min-height: 0;
-}
-.cid-rCDT3zbHKH .full-screen .slider-fullscreen-image {
-  min-height: 100vh;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: cover;
-}
-.cid-rCDT3zbHKH .full-screen .slider-fullscreen-image.active {
-  display: -o-flex;
-}
-.cid-rCDT3zbHKH .full-screen .container {
-  width: auto;
-  padding-right: 0;
-  padding-left: 0;
-}
-.cid-rCDT3zbHKH .full-screen .carousel-item .container.container-slide {
-  width: 100%;
-  min-height: 100vh;
-  padding: 0;
-}
-.cid-rCDT3zbHKH .full-screen .carousel-item .container.container-slide img {
-  display: none;
-}
-.cid-rCDT3zbHKH .mbr-background-video-preview {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-.cid-rCDT3zbHKH .mbr-overlay ~ .container-slide {
-  z-index: auto;
-}
-.cid-rCDT3zbHKH P {
+.cid-rV3vL4JYcY DIV {
   text-align: left;
 }
-.cid-rCDT3zbHKH H2 {
-  text-align: left;
+.cid-rV3vL4JYcY H1 {
+  color: #ffffff;
 }
 .cid-rCDTiXK3Yh {
   padding-top: 30px;
